# service-sls-lanc-contabeis-financial

./: .gitignore  Dockerfile  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml  test.py  test2.py
src/: convert_txt.py  functions.py  get_layout.py  handler.py  read_lines_and_processed.py  save_data.py
src/custom_layouts/: l_00001_pdf_email_nutronordeste.py  l_00002_pdf_omnie_extrato_conciliado.py  mount_historic.py  read_lines_and_processed.py  update_values_fields_to_save.py
src/treat_data/: analyze_setting_fields.py  calc_difference_paidReceived_x_interestDiscount.py  calc_difference_paidReceived_x_rateCart.py  check_columns_that_have_value.py  check_if_is_duplicated_fields.py  consider_amountPaid_amountReceived.py  correlation_bank_x_settings_client.py  group_row_data.py  handle_group_by_lancs_by_some_fields.py  handle_layout_is_partida_multipla.py  identifies_header.py  ignore_lines_dont_read.py  is_valid_data_this_companie.py  is_valid_line_to_print.py  multiple_per_less_one_when_necessary.py  sum_interest_fine_and_discount.py  treat_data_layout.py  update_amount_movement_if_negative.py  update_fields_not_main.py  update_values_fields_to_save.py  validate_if_cnpj_or_cpf_is_valid.py
