[tool.poetry]
name = "service-sls-process-lanc-contabeis-financial"
version = "0.1.0"
description = ""
authors = ["Elder Vivot <eldervivot@gmail.com>"]
readme = "README.md"
packages = [{include = "service_sls_process_lanc_contabeis_financial"}]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.4"
xlrd = "^2.0.1"
pandas = "^2.0.2"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
flake8 = "^6.0.0"
autopep8 = "^2.0.2"
python-dotenv = "^1.0.0"
boto3 = "^1.26.123"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
